# rulebot

./: .gitignore  CLAUDE.md  README.md  TRAINING_GUIDE.md  oracle-cards-20250722211118.json  pyproject.toml
config/: settings.yaml
data/training/: example_questions.yaml
data/vector_index/: config.json  documents.pkl
src/: cli.py  config.py
src/cli/: __init__.py  __main__.py  training.py
src/database/: ingestion.py  models.py  queries.py  setup.py
src/dspy_tools/: judge_engine.py  signatures.py  tool_engine.py  tool_signatures.py
src/judge/: __init__.py  engine.py  streaming_engine.py
src/llm/: base.py  local.py  qwen.py  remote.py
src/rag/: __init__.py  vector_store.py
src/training/: __init__.py  dspy_optimizer.py
src/web/: main.py
src/web/templates/: chat.html  index.html
